Fix for padding and margins on smaller devices

--- a/styles/about_section/About.module.scss
+++ b/styles/about_section/About.module.scss
@@ -7,6 +7,11 @@
   background-color: $main-color;
   @include alignSectionCenter();
 
+  @include media("<530px") {
+    height: auto;
+    padding: 50px 0;
+  }
+
   .sectionsContainer {
     @include sectionsContainer();
 
